--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>정채운 이력서</title>
     <meta property="og:title" content="정채운 이력서">
     <meta property="og:description" content="이력서 of 정채운">
-    <meta property="og:image" content="./ownp">
+    <meta property="og:image" content="./ownp.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
